# aiker

./: .gitignore  AGENT.md  LOG.md  README.md  pyproject.toml
docs/: 01-current-state.md  02-structure.md  03-style-and-llm-policy.md  04-database-and-memory.md  05-tools-cli-and-roadmap.md
ink-cli/: package-lock.json  package.json
ink-cli/src/: index.tsx
legacy/: aiker_colab_prototype.py
src/aiker/: __init__.py  __main__.py  cli.py  config.py  kali.py
src/aiker/agent/: booklog.py  prompts.py  react_loop.py
src/aiker/db/: engine.py  models.py  repositories.py
src/aiker/llm/: openrouter_client.py
src/aiker/memory/: __init__.py  context_builder.py  service.py
src/aiker/sessions/: __init__.py  service.py
src/aiker/tools/: executor.py  registry.py
